--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ deploy.log
 .theme-check.yml
 config/shopify.yml
 config/settings_data.json
-assets/scss
+assets/scss/
 npm-debug.log
 .env
 .env.*
